# holders-first-protocol

./: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  ROADMAP.md  dashboard.html  indexer.js  lookup.js  package-lock.json  package.json  real-time-updater.js  run-loop.js  server.js  test-end-to-end.js  update-oracle.js
db/: schema.sql
migrations/: 002_hold_states.sql
programs/holders-first/: Cargo.toml
programs/holders-first/src/: lib.rs
tests/: update-quality-score.ts
